Backend/reproduction_log.txt
Binding 2 MCP tools to Gemini model
<-- POST /api/generate
[Orchestrator] Raw model response for session default-session: ```json
[
  {
    "library": "shadcn",
    "code": "import * as React from \"react\";\nimport { Button } from \"@/components/ui/button\";\n\n// NOTE: For 'Space Mono' font, ensure it's imported in your global CSS (e.g., via Google Fonts) or Tailwind config.\n// For example, in global.css:\n// @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');\n\nconst Header = () => {\n  return (\n    <header className=\"fixed top-0 left-0 right-0 z-50 bg-[#1A1A1A] text-[#EAEAEA] p-4 border-b border-[#333333] shadow-lg font-['Space_Mono']\">\n      <div className=\"container mx-auto flex justify-between items-center max-w-7xl px-4 sm:px-6 lg:px-8\">\n        {/* Logo / Site Title */}\n        <a href=\"/\" className=\"flex items-center gap-2 text-2xl md:text-3xl font-bold tracking-tight uppercase text-[#FF0077] hover:text-[#CC005F] transition-colors duration-200\">\n          PROJECT_INIT\n        </a>\n\n        {/* Auth Buttons */}\n        <nav className=\"flex items-center gap-4\">\n          <Button\n            variant=\"ghost\"\n            className=\"flex items-center gap-2 text-sm md:text-base font-medium text-[#EAEAEA] hover:bg-[#333333] hover:text-[#FF0077] transition-colors duration-200 focus:ring-2 focus:ring-[#FF0077] focus:ring-offset-2 focus:ring-offset-[#1A1A1A]\"\n            onClick={() => console.log(\"Sign in with Google\")}\n            aria-label=\"Sign in with Google\"\n          >\n            {/* Google SVG */}\n            <svg xmlns=\"http://www.w3.org/2000/svg\" x=\"0px\" y=\"0px\" width=\"24\" height=\"24\" viewBox=\"0 0 48 48\" className=\"h-5 w-5 fill-current\">\n
    <path fill=\"#FFC107\" d=\"M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z\"></path>\n              <path fill=\"#FF3D00\" d=\"M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z\"></path>\n              <path fill=\"#4CAF50\" d=\"M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.626-3.336-11.246-7.94l-6.571,4.819C9.656,39.663,16.318,44,24,44z\"></path>\n
   <path fill=\"#1976D2\" d=\"M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571c0.001-0.001,0.002-0.002,0.003-0.003l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,4
[Orchestrator] Cleaned JSON candidate: [
  {
    "library": "shadcn",
    "code": "import * as React from \"react\";\nimport { Button } from \"@/components/ui/button\";\n\n// NOTE: For 'Space Mono' font, ensure it's imported in your global...
Failed to parse or validate JSON.
Error details:  99 |         cleanResult.substring(0, 200) + "...",
100 |       );
101 |
102 |       // Validate and parse JSON
103 |       try {
104 |         let parsed = JSON.parse(cleanResult);
                                ^
SyntaxError: JSON Parse error: Unterminated string
      at generateComponent (N:\comps\Backend\src\ai\orchestrator.ts:104:27)

Result that failed parsing: [
  {
    "library": "shadcn",
    "code": "import * as React from \"react\";\nimport { Button } from \"@/components/ui/button\";\n\n// NOTE: For 'Space Mono' font, ensure it's imported in your global CSS (e.g., via Google Fonts) or Tailwind config.\n// For example, in global.css:\n// @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');\n\nconst Header = () => {\n  return (\n    <header className=\"fixed top-0 left-0 right-0 z-50 bg-[#1A1A1A] text-[#EAEAEA] p-4 border-b border-[#333333] shadow-lg font-['Space_Mono']\">\n      <div className=\"container mx-auto flex justify-between items-center max-w-7xl px-4 sm:px-6 lg:px-8\">\n        {/* Logo / Site Title */}\n        <a href=\"/\" className=\"flex items-center gap-2 text-2xl md:text-3xl font-bold tracking-tight uppercase text-[#FF0077] hover:text-[#CC005F] transition-colors duration-200\">\n          PROJECT_INIT\n        </a>\n\n        {/* Auth Buttons */}\n        <nav className=\"flex items-center gap-4\">\n          <Button\n            variant=\"ghost\"\n            className=\"flex items-center gap-2 text-sm md:text-base font-medium text-[#EAEAEA] hover:bg-[#333333] hover:text-[#FF0077] transition-colors duration-200 focus:ring-2 focus:ring-[#FF0077] focus:ring-offset-2 focus:ring-offset-[#1A1A1A]\"\n            onClick={() => console.log(\"Sign in with Google\")}\n            aria-label=\"Sign in with Google\"\n          >\n            {/* Google SVG */}\n            <svg xmlns=\"http://www.w3.org/2000/svg\" x=\"0px\" y=\"0px\" width=\"24\" height=\"24\" viewBox=\"0 0 48 48\" className=\"h-5 w-5 fill-current\">\n
    <path fill=\"#FFC107\" d=\"M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z\"></path>\n              <path fill=\"#FF3D00\" d=\"M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z\"></path>\n              <path fill=\"#4CAF50\" d=\"M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.626-3.336-11.246-7.94l-6.571,4.819C9.656,39.663,16.318,44,24,44z\"></path>\n
   <path fill=\"#1976D2\" d=\"M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571c0.001-0.001,0.002-0.002,0.003-0.003l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,4
Error in GeminiOrchestrator: 125 |
);
126 |         } else {
127 |           console.error("Error details:", e);
128 |         }
129 |         console.error("Result that failed parsing:", cleanResult);
130 |         throw new Error(
                        ^
error: Failed to generate valid JSON response from AI: JSON Parse error: Unterminated string
      at generateComponent (N:\comps\Backend\src\ai\orchestrator.ts:130:19)

Generation error: 125 |           );
126 |         } else {
127 |           console.error("Error details:", e);
128 |         }
129 |         console.error("Result that failed parsing:", cleanResult);
130 |         throw new Error(
                        ^
error: Failed to generate valid JSON response from AI: JSON Parse error: Unterminated string
      at generateComponent (N:\comps\Backend\src\ai\orchestrator.ts:130:19)

--> POST /api/generate 500 35s
